chore: add docker compose for app and jib